# sdistrib

./: .gitignore  .gitmodules  LICENSE  README.MD
client/: CMakeLists.txt  meson.build
client/src/: main.cpp  parse.cpp  parse.hpp
common/: common.hpp  image.hpp  job.hpp  monoser.hpp  msg.hpp  msgtype.hpp  msgvar.hpp  wkinfo.hpp  zhelpers.hpp
manager/: CMakeLists.txt  Cargo.toml  meson.build
manager/src/: main.cpp  main.rs  manager.cpp  manager.hpp  wstr.hpp
worker/: CMakeLists.txt  compile_commands.json  meson.build  meson.options
worker/src/: cfg.hpp  main.cpp  worker.cpp  worker.hpp
